feat: add response

--- a/progress-block/src/options/options.css
+++ b/progress-block/src/options/options.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
+label {
+  font-size: 16px;
+  line-height: 19px;
+  font-family: Inter;
+}
+
 .options {
   display: flex;
   flex-direction: column;
@@ -17,6 +25,7 @@
   text-align: center;
   border-radius: 20px;
   border: solid 1px black;
+  font-size: 16px;
 }
 
 .input-wrapper {
@@ -48,4 +57,40 @@
   height: 24px;
   background-color: #FFFFFF;
   border-radius: 50%;
+}
+
+@media (max-width: 362px) {
+
+  label {
+    font-size: 4.42vw;
+    line-height: 5.25vw;
+  }  
+
+  .options__content {
+    gap: 4.14vw;
+  }
+  
+  .input {
+    width: 16.57vw;
+    height: 8.84vw;
+    font-size: 4.42vw;
+    border-radius: 5.52vw;
+    border: solid 0.28vw black;
+  }
+  
+  .input-wrapper {
+    gap: 5.52vw;
+  }
+  
+  .toggle-btn {
+    width: 16.57vw;
+    height: 8.84vw;
+    border-radius: 5.52vw;
+    padding: 0 1.10vw;
+  }
+  
+  .toggle-btn__icon {
+    width: 6.63vw;
+    height: 6.63vw;
+  }  
 }
