--- a/progress-block/src/options/options.css
+++ b/progress-block/src/options/options.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  /* display: none; <- Crashes Chrome on hover */
+  -webkit-appearance: none;
+  margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
 label {
   font-size: 16px;
   line-height: 19px;
